--- a/HomePageFAQ.html
+++ b/HomePageFAQ.html
@@ -83,11 +83,30 @@
     </section>
 
     <footer>
-        <p>© Tricycare 2025 All rights Reserved</p>
-            <a href="#">Privacy</a> • 
+        <div class="container">
+            <div class="contact-info">
+                <div class="footer-logo">
+                <img src="images/tricycare_logo.png" alt="tricycare_logo">
+                <h1>TRICYCARE</h1>
+                </div>
+                <p>Contact us</p>
+                <p>tricycare@gmail.com</p>
+                <p>09365235415</p>
+                <hr>
+                <p>#311 Alakan Street, Mercado<br>Malolos Bulacan 2025</p>
+            </div>
+            <div class="download-app">
+                <p>Download the app now!</p>
+                <img src="images/googleplay.svg" alt="Google Play Button">
+            </div>
+        </div>
+        <div class="footer">
+            <p>© Tricycare 2025 All rights Reserved</p>
+            <a href="HomePagePrivacyPolicy.html">Privacy</a> • 
             <a href="#">Terms</a> • 
-            <a href="#">FAQ</a>
+            <a href="HomePageFAQ.html">FAQ</a>
         </p>
+        </div>
     </footer>
     <script>
 
