--- a/index.html
+++ b/index.html
@@ -107,7 +107,11 @@
             </div>
         </div>
         <div class="footer">
-            &copy; tricycare 2025 All rights Reserved
+            <p>© Tricycare 2025 All rights Reserved</p>
+            <a href="#">Privacy</a> • 
+            <a href="#">Terms</a> • 
+            <a href="#">FAQ</a>
+        </p>
         </div>
     </footer>
 </body>
