--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         </div>
         <div class="footer">
             <p>© Tricycare 2025 All rights Reserved</p>
-            <a href="#">Privacy</a> • 
+            <a href="HomePagePrivacyPolicy.html">Privacy</a> • 
             <a href="#">Terms</a> • 
-            <a href="#">FAQ</a>
+            <a href="HomePageFAQ.html">FAQ</a>
         </p>
         </div>
     </footer>
