--- a/HomePagePrivacyPolicy.html
+++ b/HomePagePrivacyPolicy.html
@@ -11,10 +11,9 @@
 <body>
     <header>
         <nav>
-            <a href="#about">About us</a>
-            <a href="#how-it-works">Services</a>
-            <a href="#firstcontent">Features</a>
-            <a href="homePageFAQ.html" target="_blank">FAQs</a>
+            <a href="index.html#about">About us</a>
+            <a href="index.html#how-it-works">Services</a>
+            <a href="index.html#features">Features</a>
         </nav>
     </header>
 
