--- a/HomePageFAQ.html
+++ b/HomePageFAQ.html
@@ -12,9 +12,9 @@
 
     <header>
         <nav>
-            <a href="#about">About us</a>
-            <a href="#how-it-works">Services</a>
-            <a href="#firstcontent">Features</a>
+            <a href="index.html#about">About us</a>
+            <a href="index.html#how-it-works">Services</a>
+            <a href="index.html#features">Features</a>
         </nav>
     </header>
     
