--- a/index.html
+++ b/index.html
@@ -8,19 +8,28 @@
 </head>
 <body>
     <header>
+        <div class="logo-container">
+            <img src="images/tricycare_logo.png" alt="Tricycare Logo" class="logo">
+            <span class="brand-name">Tricycare</span>
+        </div>
         <nav>
             <a href="#about">About us</a>
             <a href="#how-it-works">Services</a>
-            <a href="#firstcontent">Features</a>
+            <a href="#features">Features</a>
             <a href="homePageFAQ.html" target="_blank">FAQs</a>
         </nav>
     </header>
 
-    <section class="firstcontent" id="firstcontent">
-        <img src="images/image 25.svg" alt="Tricycle">
-        <h1>TRICYCARE</h1>
-        
-    </section>
+    <section class="hero">
+        <div class="hero-content">
+            <h1>TRICYCARE</h1>
+            <p>Your Ride, Your Way</p>
+        </div>
+        <div class="hero-images">
+            <img src="images/homepage_book_a_ride.png" alt="Mobile App Mockup" class="mockup">
+            <img src="images/white tricycle.svg" alt="Tricycle" class="tricycle">
+        </div>
+    </section> 
 
     <section class="features">
         
@@ -80,7 +89,7 @@
     <section class="about" id="about">
         <h1>About Us</h1>
         <div class="content">
-            <img src="images/tricycare_logo.png" alt="About Us">
+            <img src="images/about us pic.png" alt="About Us">
             <p>
                 Welcome to Tricycare, your trusted partner in transportation. We're revolutionizing the way people commute by providing a seamless and reliable ride-booking experience for tricycles. 
                 <br><br> 
