--- a/HomePageFAQ.html
+++ b/HomePageFAQ.html
@@ -11,10 +11,15 @@
 <body>
 
     <header>
+        <div class="logo-container">
+            <img src="images/tricycare_logo.png" alt="Tricycare Logo" class="logo">
+            <span class="brand-name">Tricycare</span>
+        </div>
         <nav>
-            <a href="index.html#about">About us</a>
-            <a href="index.html#how-it-works">Services</a>
-            <a href="index.html#features">Features</a>
+            <a href="#about">About us</a>
+            <a href="#how-it-works">Services</a>
+            <a href="#features">Features</a>
+            <a href="homePageFAQ.html" target="_blank">FAQs</a>
         </nav>
     </header>
     
