--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>TricyCare</title>
 </head>
 <body>
+
+    <script src="script.js"></script>
+
+
     <header>
         <div class="logo-container">
             <img src="images/tricycare_logo.png" alt="Tricycare Logo" class="logo">
