--- a/HomePagePrivacyPolicy.html
+++ b/HomePagePrivacyPolicy.html
@@ -15,9 +15,9 @@
             <span class="brand-name">Tricycare</span>
         </div>
         <nav>
-            <a href="#about">About us</a>
-            <a href="#how-it-works">Services</a>
-            <a href="#features">Features</a>
+            <a href="index.html#about">About us</a>
+            <a href="index.html#how-it-works">Services</a>
+            <a href="index.html#features">Features</a>
             <a href="homePageFAQ.html" target="_blank">FAQs</a>
         </nav>
     </header>
