--- a/HomePageFAQ.html
+++ b/HomePageFAQ.html
@@ -57,15 +57,17 @@
                 </div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">How to check your balance?</button>
+                <button class="faq-question">How do I register as a driver?</button>
                 <div class="faq-answer">
-                    <p>Drivers can check their balance in the earnings section of the app.</p>
+                    <p>You can register by downloading the app and signing up with your personal details, vehicle information, and required documents.</p>
                 </div>
             </div>
             <div class="faq-item">
-                <button class="faq-question">How much balance do I need to accept bookings?</button>
+                <button class="faq-question">What are the requirements to become a driver?</button>
                 <div class="faq-answer">
-                    <p>Drivers must maintain a minimum balance in their wallet to accept bookings.</p>
+                    <p>Be at least 18 years old (or per local regulations).
+                        Have a valid driver’s license for a tricycle.
+                        Provide vehicle registration and insurance (if applicable).</p>
                 </div>
             </div>
         </div>
