--- a/HomePageFAQ.html
+++ b/HomePageFAQ.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ Section</title>
-    <link rel="stylesheet" href="/css/HomePageFAQ.css">
+    <link rel="stylesheet" href="css/HomePageFAQ.css">
 </head>
 
 <body>
