--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <nav>
             <a href="#about">About us</a>
             <a href="#how-it-works">Services</a>
-            <a href="#features">Features</a>
-            <a href="homePageFAQ.html" target="_blank">FAQs</a>
+            <a href=".features">Features</a>
+            <a href="HomePageFAQ.html" target="_blank">FAQs</a>
         </nav>
     </header>
 
