--- a/HomePagePrivacyPolicy.html
+++ b/HomePagePrivacyPolicy.html
@@ -18,7 +18,7 @@
             <a href="index.html#about">About us</a>
             <a href="index.html#how-it-works">Services</a>
             <a href="index.html#features">Features</a>
-            <a href="homePageFAQ.html" target="_blank">FAQs</a>
+            <a href="HomePageFAQ.html" target="_blank">FAQs</a>
         </nav>
     </header>
 
