--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <a href="#about">About us</a>
             <a href="#how-it-works">Services</a>
-            <a href=".features">Features</a>
+            <a href="#features">Features</a>
             <a href="HomePageFAQ.html" target="_blank">FAQs</a>
         </nav>
     </header>
@@ -35,7 +35,7 @@
         </div>
     </section> 
 
-    <section class="features">
+    <section id="features" class="features">
         
             <img src="images/features pic (1).png" alt="App Features">
        
