--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="text-content">
           <h1>Download now</h1>
           <p>Reliable Tricycle Transport for Your Daily Needs.</p>
-          <a href="https://play.google.com/store/apps/details?id=com.mobilitech.tryke.user&hl=en" target="_blank" class="google-play-button" >
+          <a href="temp.html" target="_blank" class="google-play-button" >
             <img src="images/googleplay.svg" alt="Get it on Google Play">
           </a>
         </div>
