--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <p>tricycare@gmail.com</p>
                 <p>09365235415</p>
                 <hr>
-                <p>#311 Alakan Street, Mercado<br>Malolos Bulacan 2025</p>
+                <p>Catmon Rd, Capitol View Park Subdivision, Barangay Bulihan,<br>Malolos Bulacan</p>
             </div>
             <div class="download-app">
                 <p>Download the app now!</p>
